fix card layout bug

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -70,7 +70,7 @@ main {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: 250px;
+    grid-auto-rows: 300px;
 
     padding: 10px;
     gap: 10px;
@@ -83,6 +83,17 @@ main {
         font-family: $fontCards;
         letter-spacing: .2rem;
         background-color: #e0e7ff;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+
+        overflow-x: hidden;
+
+        hr {
+            width: 200px;
+        }
         
 
         .title {
@@ -93,7 +104,7 @@ main {
         }
         .author {
             font-size: 1.2rem;
-            line-height: 5rem;
+            line-height: 2rem;
 
         }
         button.read {
