--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,7 +58,7 @@ main {
   grid-column: 2/3;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: 250px;
+  grid-auto-rows: 300px;
   padding: 10px;
   gap: 10px;
 }
@@ -67,6 +67,14 @@ main .card {
   font-family: "Nova Mono", "Maiden Orange", "Pirata One";
   letter-spacing: 0.2rem;
   background-color: #e0e7ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  overflow-x: hidden;
+}
+main .card hr {
+  width: 200px;
 }
 main .card .title {
   font-weight: bold;
@@ -75,7 +83,7 @@ main .card .title {
 }
 main .card .author {
   font-size: 1.2rem;
-  line-height: 5rem;
+  line-height: 2rem;
 }
 main .card button.read {
   letter-spacing: 0.3rem;
